# opencomputer

./: .gitignore  README.md  index.html  opencomputer.html  package-lock.json  package.json  tailwind.config.js  verify_phase13.py  verify_phase14.py  vite.config.ts  vitest.config.ts  vitest.setup.ts  whoami.html
.github/workflows/: release.yml
phaos/: __main__.py  main.py  requirements.txt
phaos/cli/: main.py
phaos/core/: __init__.py  auto_retry.py  background_tasks.py  compact_context.py  feedback_loop.py  mcp_installer.py  mcp_manager.py  mcp_registry.py  mcp_tool_discovery.py  memory_store.py  performance_monitor.py  scheduler.py  search_history.py  self_teaching.py  streaming.py  subagent_manager.py  user_preferences.py  web_scraper.py  web_search.py
phaos/db/: __init__.py  conversation_store.py  database.py  schemas.py  sqlite_store.py  store.py
phaos/engine/: __init__.py  alethea_adapter.py  av2_adapter.py  error_recovery.py  orchestrator.py  react_loop.py  state_machine.py  tool_router.py
phaos/routes/: audit.py  background_tasks.py  chat.py  compact.py  conversations.py  cron.py  files.py  harness.py  harness_management.py  mcp.py  memory.py  merging.py  notifications.py  performance.py  preferences.py  routing.py  search.py  skills.py  subagents.py  tasks.py
public/: PLACEHOLDER.txt
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: db.rs  file_system.rs  git.rs  lib.rs  main.rs  terminal.rs  updater.rs
(+202 files in other folders)
