[package]
name = "opencomputer"
version = "1.0.0"
description = "OpenComputer — native desktop AI agent application"
authors = ["Noethea Dynamics"]
edition = "2021"

[lib]
name = "opencomputer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
reqwest = { version = "0.12", features = ["json", "stream"] }
semver = "1"
futures-util = "0.3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
